added form handling on signup

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/main.css">
 
-  <!-- TODO: replace with your personal Font Awesome CDN link -->
-  <script src="https://use.fontawesome.com/???.js"></script>
 </head>
 
 <body>
@@ -36,12 +34,12 @@
 
   <main>
     <aside>
-      <form>
-        <label>Sign up for our mailing list:
+      <form name="customeremail" onsubmit="handle();">
+        <label>Sign up for our mailing list: -->
           <input type="email" name="email">
         </label>
 
-        <input type="submit" value="Submit">
+        <input type="submit" value="submit">
       </form>
     </aside>
 
@@ -108,6 +106,9 @@
     </section>
   </main>
   <footer>E-commerce-site, 2017 | Lesson 04 Assignment </footer>
-  <script type="text/javascript" src="js/script.js"></script>
+  <script src="js/form-handler.js"></script>
+  <!-- <script type="text/javascript" src="js/script.js"></script> -->
+  <!-- TODO: replace with your personal Font Awesome CDN link -->
+  <!-- <script src="https://use.fontawesome.com/???.js"></script> -->
 </body>
 </html>
