removed comment tag from label

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main>
     <aside>
       <form name="customeremail" onsubmit="handle();">
-        <label>Sign up for our mailing list: -->
+        <label>Sign up for our mailing list:
           <input type="email" name="email">
         </label>
 
