--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <aside>
       <form name="customeremail" onsubmit="handle();">
         <label>Sign up for our mailing list:
-          <input type="email" name="email">
+          <input type="email" name="email" required="">
         </label>
 
         <input type="submit" value="submit">
