--- a/index.html
+++ b/index.html
@@ -49,49 +49,49 @@
       <div class="item-container">
         <div class="item">
           <h3>Reversible Plaid</h3><br>
-          <img src="images/reversible-plaid.jpg" alt="reversible plaid scarf">
+          <img src="images/reversible-plaid.png" alt="reversible plaid scarf">
           <p>Two classic patterns in one great look: This supersoft and cozy reversible scarf instantly doubles your street-style cred. 100% acrylic.</p><hr>
           <p class="price">$26.99</p><br>
         </div>
 
         <div class="item">
           <h3>Northern Lights</h3><br>
-          <img src="images/northern-lights.jpg" alt="northern lights scarf">
+          <img src="images/northern-lights.png" alt="northern lights scarf">
           <p>Handmade by women in Agra, sales provide medical and educational support in this remote area of India. Crinkly 100% cotton.</p><hr>
           <p class="price">$29.99</p><br>
         </div>
 
         <div class="item">
           <h3>Fringed Plaid</h3><br>
-          <img src="images/fringed-plaid.jpeg" alt="fringed plaid scarf">
+          <img src="images/fringed-plaid.png" alt="fringed plaid scarf">
           <p>Generously sized, extra soft and featuring a dazzling fringe, this scarf is rendered in a versatile gray, black and white plaid. Expertly beat the cold with style. 100% acrylic.</p><hr>
           <p class="price">$18.99</p><br>
         </div>
 
         <div class="item">
           <h3>Multi Color</h3><br>
-          <img src="images/multi-color.jpeg" alt="multi color scarf">
+          <img src="images/multi-color.png" alt="multi color scarf">
           <p>The Who What Where Oversize Color-Block Square Scarf is big, bold, and designed to twist and wrap any way you wish. All the colors of the season are harmonized in this oversize accent, so you can adjust to contrast or match your outfit; soft and lush, it’s your stylish standoff against cold AC and unexpected fall breezes. 100% acrylic.</p><hr>
           <p class="price">$22.99</p><br>
         </div>
 
         <div class="item">
           <h3>Ombre Infinity</h3><br>
-          <img src="images/ombre-infinity.jpg" alt="ombre infinity scarf">
+          <img src="images/ombre-infinity.png" alt="ombre infinity scarf">
           <p>A dip-dye effect adds color and dimension to a cozy infinity scarf featuring a soft, chunky knit. 100% acrylic.</p><hr>
           <p class="price">$11.99</p><br>
         </div>
 
         <div class="item">
           <h3>Ashby Twill</h3><br>
-          <img src="images/twill.jpg" alt="ashby twill scarf">
+          <img src="images/twill.png" alt="ashby twill scarf">
           <p>Faribault brings you the Ashby Twill Scarf in Natural. Woven with a 'broken' twill technique, the Ashby Twill Scarf has a slight zigzag texture. Made in USA, this timeless scarf is crafted with luxurious merino wool and finished with heather gray fringe. 100% Merino wool.</p><hr>
           <p class="price">$70.99</p><br>
         </div>
 
         <div class="item">
           <h3>Wool Cable Knit</h3><br>
-          <img src="images/wool-cable.jpeg" alt="wool cable knit scarf">
+          <img src="images/wool-cable.png" alt="wool cable knit scarf">
           <p>Warm yourself with this women's natural cable knit scarf, crafted from 100% Merino wool. Imported.</p><hr>
           <p class="price">$49.99</p><br>
         </div>
