--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <title>Winter Scarves</title>
 
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" type="text/css" media="print" href="styles/print.css">
 
 </head>
 
@@ -107,8 +109,7 @@
   </main>
   <footer>E-commerce-site, 2017 | Lesson 04 Assignment </footer>
   <script src="js/form-handler.js"></script>
-  <!-- <script type="text/javascript" src="js/script.js"></script> -->
-  <!-- TODO: replace with your personal Font Awesome CDN link -->
-  <!-- <script src="https://use.fontawesome.com/???.js"></script> -->
+  <script type="text/javascript" src="js/script.js"></script>
+  <script src="https://use.fontawesome.com/???.js"></script>
 </body>
 </html>
