--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
           <img src="images/reversible-plaid.png" alt="reversible plaid scarf">
           <p>Two classic patterns in one great look: This supersoft and cozy reversible scarf instantly doubles your street-style cred. 100% acrylic.</p><hr>
           <p class="price">$26.99</p><br>
+          <p class="cart-modify">
+            <button type="button" onclick="addToCart">+</button>
+            <button type="button" onclick="removeFromCart">-</button>
+          </p>
         </div>
 
         <div class="item">
@@ -61,6 +65,10 @@
           <img src="images/northern-lights.png" alt="northern lights scarf">
           <p>Handmade by women in Agra, sales provide medical and educational support in this remote area of India. Crinkly 100% cotton.</p><hr>
           <p class="price">$29.99</p><br>
+          <p class="cart-modify">
+            <button type="button" onclick="addToCart">+</button>
+            <button type="button" onclick="removeFromCart">-</button>
+          </p>
         </div>
 
         <div class="item">
@@ -68,6 +76,10 @@
           <img src="images/fringed-plaid.png" alt="fringed plaid scarf">
           <p>Generously sized, extra soft and featuring a dazzling fringe, this scarf is rendered in a versatile gray, black and white plaid. Expertly beat the cold with style. 100% acrylic.</p><hr>
           <p class="price">$18.99</p><br>
+          <p class="cart-modify">
+            <button type="button" onclick="addToCart">+</button>
+            <button type="button" onclick="removeFromCart">-</button>
+          </p>
         </div>
 
         <div class="item">
@@ -75,6 +87,10 @@
           <img src="images/multi-color.png" alt="multi color scarf">
           <p>The Who What Where Oversize Color-Block Square Scarf is big, bold, and designed to twist and wrap any way you wish. All the colors of the season are harmonized in this oversize accent, so you can adjust to contrast or match your outfit; soft and lush, it’s your stylish standoff against cold AC and unexpected fall breezes. 100% acrylic.</p><hr>
           <p class="price">$22.99</p><br>
+          <p class="cart-modify">
+            <button type="button" onclick="addToCart">+</button>
+            <button type="button" onclick="removeFromCart">-</button>
+          </p>
         </div>
 
         <div class="item">
@@ -82,6 +98,10 @@
           <img src="images/ombre-infinity.png" alt="ombre infinity scarf">
           <p>A dip-dye effect adds color and dimension to a cozy infinity scarf featuring a soft, chunky knit. 100% acrylic.</p><hr>
           <p class="price">$11.99</p><br>
+          <p class="cart-modify">
+            <button type="button" onclick="addToCart">+</button>
+            <button type="button" onclick="removeFromCart">-</button>
+          </p>
         </div>
 
         <div class="item">
@@ -89,6 +109,10 @@
           <img src="images/twill.png" alt="ashby twill scarf">
           <p>Faribault brings you the Ashby Twill Scarf in Natural. Woven with a 'broken' twill technique, the Ashby Twill Scarf has a slight zigzag texture. Made in USA, this timeless scarf is crafted with luxurious merino wool and finished with heather gray fringe. 100% Merino wool.</p><hr>
           <p class="price">$70.99</p><br>
+          <p class="cart-modify">
+            <button type="button" onclick="addToCart">+</button>
+            <button type="button" onclick="removeFromCart">-</button>
+          </p>
         </div>
 
         <div class="item">
@@ -96,6 +120,10 @@
           <img src="images/wool-cable.png" alt="wool cable knit scarf">
           <p>Warm yourself with this women's natural cable knit scarf, crafted from 100% Merino wool. Imported.</p><hr>
           <p class="price">$49.99</p><br>
+          <p class="cart-modify">
+            <button type="button" onclick="addToCart">+</button>
+            <button type="button" onclick="removeFromCart">-</button>
+          </p>
         </div>
 
         <div class="item">
@@ -103,6 +131,10 @@
           <img src="images/etro.png" alt="etro paisley print silk scarf">
           <p>Luxurious silk scarf with subtle paisley pattern. 100% silk.</p><hr>
           <p class="price">$26.99</p><br>
+          <p class="cart-modify">
+            <button type="button" onclick="addToCart">+</button>
+            <button type="button" onclick="removeFromCart">-</button>
+          </p>
         </div>
       </div>
     </section>
