added cart-info icon

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <span class="logo-w">W</span>inter
       <span class="logo-w">W</span>ear
       <span class="logo-w">W</span>arehouse
+      <i class="cart-info">
+        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
     </h1>
     <div>
     <nav>
@@ -27,9 +29,6 @@
         <li><a href="#">Hats</a></li>
         <li><a href="#">Gloves</a></li>
         <li><a href="#">Scarves</a></li>
-        <li class="cart-info">
-          <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-        </li>
       </ul>
     </nav>
   </header>
@@ -142,6 +141,6 @@
   <script src="js/form-handler.js"></script>
   <script src="js/cart.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
-  <script src="https://use.fontawesome.com/???.js"></script>
+  <script src="https://use.fontawesome.com/52f73afca5.js"></script>
 </body>
 </html>
