--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
           <h3 class="name">Reversible Plaid</h3><br>
           <img src="images/reversible-plaid.png" alt="reversible plaid scarf">
           <p class="description">Two classic patterns in one great look: This supersoft and cozy reversible scarf instantly doubles your street-style cred. 100% acrylic.</p><hr>
-          <p class="price">$26.99</p><br>
+          <p class="price">$26.99</p><hr>
+          <select class="item-size">
+            <option value="Small">Small</option>
+            <option value="Medium">Medium</option>
+            <option value="Large">Large</option>
+          </select>
           <p class="cart-modify">
             <button class="add" type="button" onclick="addToCart">+</button>
             <button class="remove" type="button" onclick="removeFromCart">-</button>
@@ -62,7 +67,12 @@
           <h3 class="name">Northern Lights</h3><br>
           <img src="images/northern-lights.png" alt="northern lights scarf">
           <p class="description">Handmade by women in Agra, sales provide medical and educational support in this remote area of India. Crinkly 100% cotton.</p><hr>
-          <p class="price">$29.99</p><br>
+          <p class="price">$29.99</p><hr>
+          <select class="item-size">
+    				<option value="Small">Small</option>
+    				<option value="Medium">Medium</option>
+    				<option value="Large">Large</option>
+    			</select>
           <p class="cart-modify">
             <button class="add" type="button" onclick="addToCart">+</button>
             <button class="remove" type="button" onclick="removeFromCart">-</button>
@@ -73,7 +83,12 @@
           <h3 class="name">Fringed Plaid</h3><br>
           <img src="images/fringed-plaid.png" alt="fringed plaid scarf">
           <p class="description">Generously sized, extra soft and featuring a dazzling fringe, this scarf is rendered in a versatile gray, black and white plaid. Expertly beat the cold with style. 100% acrylic.</p><hr>
-          <p class="price">$18.99</p><br>
+          <p class="price">$18.99</p><hr>
+          <select class="item-size">
+            <option value="Small">Small</option>
+            <option value="Medium">Medium</option>
+            <option value="Large">Large</option>
+          </select>
           <p class="cart-modify">
             <button class="add" type="button" onclick="addToCart">+</button>
             <button class="remove" type="button" onclick="removeFromCart">-</button>
@@ -84,7 +99,12 @@
           <h3 class="name">Multi Color</h3><br>
           <img src="images/multi-color.png" alt="multi color scarf">
           <p class="description">The Who What Where Oversize Color-Block Square Scarf is big, bold, and designed to twist and wrap any way you wish. All the colors of the season are harmonized in this oversize accent, so you can adjust to contrast or match your outfit; soft and lush, it’s your stylish standoff against cold AC and unexpected fall breezes. 100% acrylic.</p><hr>
-          <p class="price">$22.99</p><br>
+          <p class="price">$22.99</p><hr>
+          <select class="item-size">
+            <option value="Small">Small</option>
+            <option value="Medium">Medium</option>
+            <option value="Large">Large</option>
+          </select>
           <p class="cart-modify">
             <button class="add" type="button" onclick="addToCart">+</button>
             <button class="remove" type="button" onclick="removeFromCart">-</button>
@@ -95,7 +115,12 @@
           <h3 class="name">Ombre Infinity</h3><br>
           <img src="images/ombre-infinity.png" alt="ombre infinity scarf">
           <p class="description">A dip-dye effect adds color and dimension to a cozy infinity scarf featuring a soft, chunky knit. 100% acrylic.</p><hr>
-          <p class="price">$11.99</p><br>
+          <p class="price">$11.99</p><hr>
+          <select class="item-size">
+            <option value="Small">Small</option>
+            <option value="Medium">Medium</option>
+            <option value="Large">Large</option>
+          </select>
           <p class="cart-modify">
             <button class="add" type="button" onclick="addToCart">+</button>
             <button class="remove" type="button" onclick="removeFromCart">-</button>
@@ -106,7 +131,12 @@
           <h3 class="name">Ashby Twill</h3><br>
           <img src="images/twill.png" alt="ashby twill scarf">
           <p class="description">Faribault brings you the Ashby Twill Scarf in Natural. Woven with a 'broken' twill technique, the Ashby Twill Scarf has a slight zigzag texture. Made in USA, this timeless scarf is crafted with luxurious merino wool and finished with heather gray fringe. 100% Merino wool.</p><hr>
-          <p class="price">$70.99</p><br>
+          <p class="price">$70.99</p><hr>
+          <select class="item-size">
+            <option value="Small">Small</option>
+            <option value="Medium">Medium</option>
+            <option value="Large">Large</option>
+          </select>
           <p class="cart-modify">
             <button class="add" type="button" onclick="addToCart">+</button>
             <button class="remove" type="button" onclick="removeFromCart">-</button>
@@ -117,7 +147,12 @@
           <h3 class="name">Wool Cable Knit</h3><br>
           <img src="images/wool-cable.png" alt="wool cable knit scarf">
           <p class="description">Warm yourself with this women's natural cable knit scarf, crafted from 100% Merino wool. Imported.</p><hr>
-          <p class="price">$49.99</p><br>
+          <p class="price">$49.99</p><hr>
+          <select class="item-size">
+            <option value="Small">Small</option>
+            <option value="Medium">Medium</option>
+            <option value="Large">Large</option>
+          </select>
           <p class="cart-modify">
             <button class="add" type="button" onclick="addToCart">+</button>
             <button class="remove" type="button" onclick="removeFromCart">-</button>
@@ -128,7 +163,12 @@
           <h3 class="name">Etro Paisley-Print Silk</h3><br>
           <img src="images/etro.png" alt="etro paisley print silk scarf">
           <p class="description">Luxurious silk scarf with subtle paisley pattern. 100% silk.</p><hr>
-          <p class="price">$26.99</p><br>
+          <p class="price">$26.99</p><hr>
+          <select class="item-size">
+            <option value="Small">Small</option>
+            <option value="Medium">Medium</option>
+            <option value="Large">Large</option>
+          </select>
           <p class="cart-modify">
             <button class="add" type="button" onclick="addToCart">+</button>
             <button class="remove" type="button" onclick="removeFromCart">-</button>
