trying to workout the cart js work

--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
     </section>
   </main>
   <footer>E-commerce-site, 2017 | Assignments </footer>
+  <script src="js/">
+
+  </script>
   <script src="js/form-handler.js"></script>
   <script src="js/cart.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
