added addToCart and removeFromCart classes and removed html onclick handler

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <option value="Large">Large</option>
           </select>
           <p class="cart-modify">
-            <button class="add" type="button" onclick="addToCart">+</button>
-            <button class="remove" type="button" onclick="removeFromCart">-</button>
+            <button class="addToCart" type="button">+</button>
+            <button class="removeFromCart" type="button">-</button>
           </p>
         </div>
 
@@ -74,8 +74,8 @@
     				<option value="Large">Large</option>
     			</select>
           <p class="cart-modify">
-            <button class="add" type="button" onclick="addToCart">+</button>
-            <button class="remove" type="button" onclick="removeFromCart">-</button>
+            <button class="addToCart" type="button">+</button>
+            <button class="removeFromCart" type="button">-</button>
           </p>
         </div>
 
@@ -90,8 +90,8 @@
             <option value="Large">Large</option>
           </select>
           <p class="cart-modify">
-            <button class="add" type="button" onclick="addToCart">+</button>
-            <button class="remove" type="button" onclick="removeFromCart">-</button>
+            <button class="addToCart" type="button">+</button>
+            <button class="removeFromCart" type="button">-</button>
           </p>
         </div>
 
@@ -106,15 +106,15 @@
             <option value="Large">Large</option>
           </select>
           <p class="cart-modify">
-            <button class="add" type="button" onclick="addToCart">+</button>
-            <button class="remove" type="button" onclick="removeFromCart">-</button>
+            <button class="addToCart" type="button">+</button>
+            <button class="removeFromCart" type="button">-</button>
           </p>
         </div>
 
         <div class="item">
           <h3 class="name">Ombre Infinity</h3><br>
           <img src="images/ombre-infinity.png" alt="ombre infinity scarf">
-          <p class="description">A dip-dye effect adds color and dimension to a cozy infinity scarf featuring a soft, chunky knit. 100% acrylic.</p><hr>
+          <p class="description">A dip-dye effect add color and dimension to a cozy infinity scarf featuring a soft, chunky knit. 100% acrylic.</p><hr>
           <p class="price">$11.99</p><hr>
           <select class="item-size">
             <option value="Small">Small</option>
@@ -122,8 +122,8 @@
             <option value="Large">Large</option>
           </select>
           <p class="cart-modify">
-            <button class="add" type="button" onclick="addToCart">+</button>
-            <button class="remove" type="button" onclick="removeFromCart">-</button>
+            <button class="addToCart" type="button">+</button>
+            <button class="removeFromCart" type="button">-</button>
           </p>
         </div>
 
@@ -138,8 +138,8 @@
             <option value="Large">Large</option>
           </select>
           <p class="cart-modify">
-            <button class="add" type="button" onclick="addToCart">+</button>
-            <button class="remove" type="button" onclick="removeFromCart">-</button>
+            <button class="addToCart" type="button">+</button>
+            <button class="removeFromCart" type="button">-</button>
           </p>
         </div>
 
@@ -154,8 +154,8 @@
             <option value="Large">Large</option>
           </select>
           <p class="cart-modify">
-            <button class="add" type="button" onclick="addToCart">+</button>
-            <button class="remove" type="button" onclick="removeFromCart">-</button>
+            <button class="addToCart" type="button">+</button>
+            <button class="removeFromCart" type="button">-</button>
           </p>
         </div>
 
@@ -170,8 +170,8 @@
             <option value="Large">Large</option>
           </select>
           <p class="cart-modify">
-            <button class="add" type="button" onclick="addToCart">+</button>
-            <button class="remove" type="button" onclick="removeFromCart">-</button>
+            <button class="addToCart" type="button">+</button>
+            <button class="removeFromCart" type="button">-</button>
           </p>
         </div>
       </div>
